SSB > User is not able to click the 'Opt In' checkbox on specific form builder component(v-3) and error appear on console #10661

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.v3.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.v3.component.html
@@ -146,7 +146,7 @@
                                     <div class="form-group {{vm.fieldClass()}} input-field-container" ng-if="vm.component.optInRequired"  ng-class="{ 'has-error' : (formBuilder._optin.$invalid || formBuilder._optin.$error.$required) && !formBuilder._optin.$pristine }">
                                         <span class="required req-opt-in">*</span>
                                         <div class="form-checkbox-field">
-                                            <input class="optin-checkbox" type="checkbox" ng-model="vm.formBuildreq-opt-iner['_optin']"   name="_optin" ng-required='true' ng-change="vm.formFiedlsCHange('_optin')">
+                                            <input class="optin-checkbox" type="checkbox" ng-model="vm.formBuilder['_optin']" name="_optin" ng-required='true' ng-change="vm.formFiedlsCHange('_optin')">
                                         </div>
                                         <div class="form-checkbox-label">
                                             <div elem ng-model="vm.component.optInText">
