Contacts > manage > Image selector button appear slightly misaligned on page, if user collapse the side menu bar #10662

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -59,6 +59,10 @@ contact-details-component{
             padding-left: 15px;
             margin-bottom: 15px;
             .contact-image{
+                .contact-image-container{
+                    position: relative;
+                    display: inline-block;
+                }
                 img{
                     max-width:100%;
                 }
@@ -66,7 +70,7 @@ contact-details-component{
                 span.fa{
                     position: absolute;
                     bottom: 10px;
-                    right: 20px;
+                    right: 10px;
                     cursor: pointer;
                 }
             }
