--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -13,7 +13,7 @@
             <div class="contact-profile-stats">
                 <div class="margin-top-20">
                     <div class="contact-image col-xs-5">
-                        <div class="margin-bottom-5">
+                        <div class="margin-bottom-5 contact-image-container">
                             <img ng-src="{{ vm.state.contact.photo }}" err-src="/admin/assets/images/default-user.png">
                             <span class="fa fa-2x fa-edit" ng-click="vm.openMediaModal()"></span>
                         </div>
