--- a/public/admin/assets/js/contact-details/activity/contact-activity.component.html
+++ b/public/admin/assets/js/contact-details/activity/contact-activity.component.html
@@ -371,7 +371,7 @@
 	                                    	</span>	
 	                                        <ul class="form-values">
 	                                            <li ng-repeat="event in activity.page_events | filter: { entrance: false }">
-	                                                Viewed the page <span class="text-bold">{{event.page.title || event.requestedUrl.path || event.url.path}}</span>
+	                                                Viewed the page <span class="text-bold">{{event.page.title || event.page.handle || event.requestedUrl.path || event.url.path}}</span>
 	                                            </li>
 	                                        </ul>	                         
 	                                    </div>
