#10652 mixed media hide show

--- a/public/less/ssb-site-builder/ssb-sections/ssb-mixed-media.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-mixed-media.less
@@ -50,5 +50,17 @@
         .header , .desc {
             height: 60px;
         }
+        &.mouse-off{
+            display: block;
+        }
+        &.mouse-on {
+            display: none
+        }
+    }
+    div.image-gallery-images:hover div.image-overlay.mouse-on{
+        display: block;
+    }
+    div.image-gallery-images:hover div.image-overlay.mouse-off{
+        display: none;
     }
 }
