sub-nav issue on blog page #10670

--- a/public/less/frontend/components/navbar-v1.less
+++ b/public/less/frontend/components/navbar-v1.less
@@ -233,7 +233,7 @@ ul.nav {
 .overflow_visible.unset{
      z-index: unset;
 }
-.ssb-layout__header_2-col_footer.ssb-page-blog-list{ 
+.ssb-layout__header_2-col_footer.ssb-page-blog-list .ssb-wrap-left-fixed-left-nav{ 
     .overflow_visible{
         overflow: auto !important;
         z-index: 10;
