Frontend > Content should appear in middle on empty cart window at frontend of application #10672

--- a/public/less/frontend/components/shopping-cart-v1.less
+++ b/public/less/frontend/components/shopping-cart-v1.less
@@ -139,7 +139,8 @@
     }
 
     .empty-cart {
-      margin-top: 100px;
+      margin-top: 70px;
+      margin-bottom: 70px;
       text-align: center;
       .fa {
         font-size: 50px;
