Enhancement > Leadsource > Frontend link should not appear on welcome activation page, if user tries to activate any leadsource OEM account #10592

--- a/public/components/activate-account_v1.html
+++ b/public/components/activate-account_v1.html
@@ -138,8 +138,8 @@
                     	</ul>
                     </h3>
 
-                    <h3 class="welcome-site-url-text margin-top-5">The site you created can be found here:</h3>
-                    <h3 class="welcome-site-url">
+                    <h3 ng-hide="account.oem" class="welcome-site-url-text margin-top-5">The site you created can be found here:</h3>
+                    <h3 ng-hide="account.oem" class="welcome-site-url">
                     	<a href="{{siteurl}}" target="_blank">{{siteurl}}</a></h3>
                     <h4 class="center">
                         <a class="btn btn-primary btn-welcome-account" href="{{accountUrl}}" >GO TO MY ACCOUNT</a>
