--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -152,6 +152,24 @@
             filter: blur(5px);
         }
     }
+
+    .ssb-page-section-layout-blur-image.ssb-section-amm [ssb-image-component]{
+        -webkit-filter: blur(5px);
+        -moz-filter: blur(5px);
+        -o-filter: blur(5px);
+        -ms-filter: blur(5px);
+        filter: blur(5px); 
+        left: -1%;
+        right: -1%;
+        top: -1%;
+        bottom: -1%;
+        width: 105%;
+        height: 105%;
+        max-height: 105%;
+        max-width: 105%;
+        margin: -1%;
+    }
+    
     .ssb-page-section-layout-nav-hero.hide-hero-bg-image [ssb-image-component] {
         background-image: none !important;
         .ssb-image-component-container{
