Fix forgot password confirmation message to remove intercom/bottom-right corner reference

--- a/templates/forgotpassword.jade
+++ b/templates/forgotpassword.jade
@@ -24,7 +24,7 @@ block content
                                 | Forget Password?
                             p
                                 | Enter your e-mail address below to reset your password before continuing. #{errMsg}
-                               
+
 
                             .form-group
                                 span.input-icon
@@ -72,9 +72,9 @@ block content
                             | &nbsp;Go Back
             else if errorMsg
                 .box-forgot
-                    p We have sent an email with a link to reset the password to the email address associated with this account.  If you do not receive this email, please contact support (
+                    p We have sent an email with a link to reset the password to the email address associated with this account.  If you do not receive this email, please contact support by email (
                         a(href="mailto:#{supportEmail}") #{supportEmail}
-                        | ) or ask for help at any time via the chat button on the bottom right of the screen.
+                        | ).
             else
                 .box-forgot
                     form.form-forgot(role="form", action="/forgotpassword" method="post")
