--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -100,7 +100,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-7">
                                 <div class="details">
-                                    <span class="full-name">
+                                    <span class="full-name" ng-if="vm.state.fullName">
                                         {{vm.state.fullName}}                                
                                     </span>
                                     <ul class="contact-tags" >
@@ -174,7 +174,7 @@
                         </div>
                         <div ng-if="vm.uiState.isEditMode" class="edit-contact-info">
                             <form action="#" name="form" role="form" id="form">
-                                <div class="col-xs-12">
+                                <div class="col-xs-12 padding-left-0">
                                     <div class="col-xs-12">
                                         <button type="button" ng-disabled="vm.uiState.saveLoading" class="btn btn-primary btn-o pull-right btn btn-primary btn-o" ng-click="vm.cancelContactDetails()">
                                             Cancel
