Contacts > Manage > “Add or Edit” and “Save/cancel” button should be right aligned on contact details page #10691

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -175,7 +175,7 @@
                         <div ng-if="vm.uiState.isEditMode" class="edit-contact-info">
                             <form action="#" name="form" role="form" id="form">
                                 <div class="col-xs-12 padding-left-0">
-                                    <div class="col-xs-12">
+                                    <div class="col-xs-12 padding-left-0 padding-right-0">
                                         <button type="button" ng-disabled="vm.uiState.saveLoading" class="btn btn-primary btn-o pull-right btn btn-primary btn-o" ng-click="vm.cancelContactDetails()">
                                             Cancel
                                         </button>
