--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -147,6 +147,7 @@ contact-details-component{
                     padding-left: 0 !important;
                     padding-right: 0 !important;
                     margin-left: -15px;
+                    margin-right: -15px;
                 }
                 .nav-tabs{
                     border-bottom: 2px solid #ddd;
