--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -104,6 +104,7 @@ contact-details-component{
                     &.website-icon{
                         span{
                             font-size:35px;
+                            line-height: 40px;
                             color: #666;
                         }
                         span.gray-bg-color{
