--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -91,6 +91,7 @@ contact-details-component{
 
                 li{
                     display: inline-block;
+                    vertical-align: bottom;
                     span{
                         width: 40px;
                         height: 40px;
