--- a/public/less/frontend/components/testimonials-v2.less
+++ b/public/less/frontend/components/testimonials-v2.less
@@ -106,6 +106,7 @@
   .slick-dots {
 
     bottom: -15px;
+    position: relative;
 
     @media screen and (min-width: 768px) {
         width:100%;
