Added pagination href to product page

--- a/templates/snippets/index_body_scripts.jade
+++ b/templates/snippets/index_body_scripts.jade
@@ -125,7 +125,7 @@ script(src="scripts/directives/ind-slider.js")
 script(src='scripts/directives/err-src.js')
 script(src='scripts/directives/modal-touch-inputs.js')
 script(src='scripts/directives/ind-international-tel-number.js')
-
+script(src="scripts/directives/ind-pagination.js")
 // COMPONENTS
 script(src="scripts/directives/editor.js")
 
