Contact Detail Page - Change 'Tag' Style to be shaded box #10699

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -105,7 +105,7 @@
                                     </span>
                                     <ul class="contact-tags" >
                                         <li ng-repeat="tag in vm.state.contact.tags track by $index">
-                                            <a class="btn btn btn-o btn-primary">{{tag.label}}</a>
+                                            <a class="contact-tags-btn">{{tag.label}}</a>
                                         </li>
                                     </ul>
                                     <span>{{vm.state.contact.gender}}</span>
