--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -197,8 +197,25 @@ contact-details-component{
                         display: inline-block;
                         margin-right: 5px;
                         margin-bottom: 5px;
-                        .btn{
-                            padding: 3px 6px;
+                        a.contact-tags-btn{
+                            border:1px solid #94BDF0;
+                            -webkit-border-radius: 0px;
+                            -moz-border-radius: 0px;
+                            border-radius: 0px;
+                            font-size:12px;
+                            font-family:helvetica, sans-serif; 
+                            padding: 3px 6px; 
+                            text-decoration:none; 
+                            display:inline-block;
+                            text-shadow: 0px 0px 0 rgba(0,0,0,0.3);
+                            font-weight:bold; color: #94BDF0;
+                            background-color: #ECF2FE; 
+                            background-image: -webkit-gradient(linear, left top, left bottom, from(#ECF2FE), to(#ECF2FE));
+                            background-image: -webkit-linear-gradient(top, #ECF2FE, #ECF2FE);
+                            background-image: -moz-linear-gradient(top, #ECF2FE, #ECF2FE);
+                            background-image: -ms-linear-gradient(top, #ECF2FE, #ECF2FE);
+                            background-image: -o-linear-gradient(top, #ECF2FE, #ECF2FE);
+                            background-image: linear-gradient(to bottom, #ECF2FE, #ECF2FE);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#ECF2FE, endColorstr=#ECF2FE);
                         }
                     }
                 }
