--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -208,7 +208,7 @@ contact-details-component{
                             text-decoration:none; 
                             display:inline-block;
                             text-shadow: 0px 0px 0 rgba(0,0,0,0.3);
-                            font-weight:bold; color: #94BDF0;
+                            color: #94BDF0;
                             background-color: #ECF2FE; 
                             background-image: -webkit-gradient(linear, left top, left bottom, from(#ECF2FE), to(#ECF2FE));
                             background-image: -webkit-linear-gradient(top, #ECF2FE, #ECF2FE);
