--- a/public/components/text-only_v1.html
+++ b/public/components/text-only_v1.html
@@ -10,5 +10,7 @@
 	<div class="col-xs-12">
 		<div elem ng-model="component.text" class-name="table-scroll" ng-style="{'height': component.isGrid && component.gridHeight ? component.gridHeight+'px':'','overflow': component.isGrid && component.gridHeight ? 'hidden':'' }">
 		</div>
+		<div class="clearfix"></div>
 	</div>
+	<div class="clearfix"></div>
 </div>
