--- a/templates/snippets/index_head_scripts.jade
+++ b/templates/snippets/index_head_scripts.jade
@@ -185,7 +185,7 @@ if (typeof account.website.theme !== 'undefined' && typeof account.website.theme
 
 if pageStyles
     style.
-        .ssb-theme-#{account.website.theme.handle} {
+        .ssb-theme-#{account.website.theme.handle},  .ssb-theme-#{account.website.theme.handle} pre {
             background-color: #{pageStyles.bodyBackgroundColor}!important;
         }
         .ssb-theme-#{account.website.theme.handle} .ssb-section-layout {
