#8674 style layout one update

--- a/public/less/ssb-site-builder/ssb-components/ssb-theme-btn.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-theme-btn.less
@@ -46,8 +46,8 @@
         line-height: 40px;
         padding: 0 5px;
         transition: box-shadow 0s ease!important;
-        transition: line-height 0s ease!important;
-
+        transition: line-height 0s ease!important; 
+        color: #ffffff;
         &:hover {
             background-color: lighten(@ssb-theme-btn-style-1-bg-color, 8%)!important;
         }
