#8389 full width added to ssb

--- a/public/less/ssb-site-builder/ssb-froala.less
+++ b/public/less/ssb-site-builder/ssb-froala.less
@@ -1202,3 +1202,9 @@ body[ng-controller] .fr-overlay {
         font-weight: 700;
     }
 }
+.img-full-width {
+  position: relative;
+  right: calc(~"50vw - 50%");
+  max-width: none!important;
+  width: 100vw!important;
+}
