--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -59,31 +59,30 @@
                     <div class="clearfix"></div>
                 </div>
                 
-                <div class="contact-stats col-xs-12 margin-top-20 margin-bottom-20 hidden">
+                <div class="contact-stats col-xs-12 margin-top-20 margin-bottom-20" ng-if="vm.state.contactSessionDetails.sessionsCount">
                     <div class="sessions">
                         <span class="description">
                             Sessions
                         </span>
-                        <span class="value">4</span>
+                        <span class="value">{{vm.state.contactSessionDetails.sessionsCount || '--'}}</span>
                     </div>
                     <div class="page-views">
                         <span class="description">
                             Page Views
                         </span>
-                        <span class="value">18</span>
-                        
+                        <span class="value">{{vm.state.contactSessionDetails.pageView || '--'}}</span>
                     </div>
                     <div class="session-duration">
                         <span class="description">
                             Session Duration
                         </span>
-                        <span class="value">4:18</span>
+                        <span class="value">{{vm.state.contactSessionDetails.sessionsDuration || '--'}}</span>
                     </div>
                     <div class="clicks">
                         <span class="description">
                             Clicks
                         </span>
-                        <span class="value">34</span>
+                        <span class="value">{{vm.state.contactSessionDetails.pageClicks || '--'}}</span>
                     </div>
                 </div>
                 <div class="clearfix"></div>
@@ -407,7 +406,7 @@
         </div>
         <!-- contact timeline/notes pane -->
         <div class="col-xs-12 col-sm-6 contact-details-right-pane">       
-            <contact-activity-component contact-id="vm.state.contactId" contact="vm.state.contact" ng-if="vm.state.contact" contact-device-details="vm.state.contactDeviceDetails"></contact-activity-component>
+            <contact-activity-component contact-id="vm.state.contactId" contact="vm.state.contact" ng-if="vm.state.contact" contact-device-details="vm.state.contactDeviceDetails" contact-session-details="vm.state.contactSessionDetails"></contact-activity-component>
         </div>
         <div class="clearfix"></div>
     </div>
