Donation Type Product - Thank You Email ID #10702

--- a/public/admin/assets/views/partials/donation.html
+++ b/public/admin/assets/views/partials/donation.html
@@ -25,8 +25,8 @@
                         <textarea ng-model='product.donationDefaultSocialPost' class="form-control" name='post' placeholder="Default Social Post"></textarea>
                     </div>
                     <div class="form-group" ng-class="{'has-error': donationForm.email.$error.required || donationForm.email.$error.email}">
-                        <label>Thank You Email ID</label>
-                        <input class="form-control" name="email" type="email" placeholder="Thank You Email ID" ng-model="product.donationThankYouEmailID" required='true'>
+                        <label>Thank You Email Address</label>
+                        <input class="form-control" name="email" type="email" placeholder="Thank You Email Address" ng-model="product.donationThankYouEmailID" required='true'>
                     </div>
                 </div>
             </form>
