--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -126,20 +126,26 @@ contact-details-component{
                 font-size: 24px;
             }
             .sessions{
-                width: 23%;
+                width: 20%;
                 float: left;
             }
             .page-views{
                 width: 27%;
                 float: left;
+                border-left: 2px solid #48b1cc;
+                padding-left: 5%;
             }
             .session-duration{
-                width: 30%;
+                width: 32%;
                 float: left;
+                border-left: 2px solid #48b1cc;
+                padding-left: 5%;
             }
             .clicks{
-                width: 20%;
+                width: 21%;
                 float: left;
+                border-left: 2px solid #48b1cc;
+                padding-left: 5%;
             }
         }
         .contact-details-tab{            
