#10698 added border to match UI

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -59,7 +59,7 @@
                     <div class="clearfix"></div>
                 </div>
                 
-                <div class="contact-stats col-xs-12 margin-top-20" ng-if="vm.state.contactSessionDetails.sessionsCount">
+                <div class="contact-stats col-xs-12 margin-top-20 padding-bottom-20" ng-if="vm.state.contactSessionDetails.sessionsCount">
                     <div class="sessions">
                         <span class="description">
                             Sessions
