--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -119,6 +119,7 @@ contact-details-component{
             }
         }
         .contact-stats{
+            border-bottom: 1px solid rgba(0, 0, 0, 0.15);
             span.description{
                 display: block;
             }
