#10683 IE social icon bg color issue

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -109,11 +109,11 @@ contact-details-component{
                             color: #666;
                         }
                         span.gray-bg-color{
-                            color: #808080ab !important;
+                            color: #c8c7cc!important;
                         }
                     }
                     .gray-bg{
-                        background: #808080ab !important;
+                        background: #c8c7cc!important;
                     }
                 }
             }
