IE contact details profile image issue

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -65,6 +65,7 @@ contact-details-component{
                 }
                 img{
                     max-width:100%;
+                    width: 100%;
                 }
                 
                 span.fa{
