Contacts > Manage > Unwanted blank space appear below the profile image in contact activities section, if user set the few different resolution images as profile image #10694

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -408,6 +408,7 @@ contact-details-component{
                     img{
                         position: absolute;
                         width: 28px;
+                        height: 28px;
                         top: 4px;
                         left: -14px;
                         z-index: 1;
