--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -38,7 +38,7 @@
                                     </a>
                                     <a ng-if="!vm.state.contact.details[0].linkedinUrl" href="javascript:void(0)" ng-click="vm.editContactMode('linkedin')">
                                        <span class="fa fa-linkedin btn-linkedin gray-bg"></span>
-                                    </a> 
+                                    </a>
                                 </li>
                                 <li>
                                     <a ng-if="vm.state.contact.details[0].facebookUrl" href="{{vm.state.contact.details[0].facebookUrl}}" target="_blank">
@@ -52,13 +52,13 @@
                             </ul>
                         </div>
                         <div class="account-info margin-top-30">
-                            <img src="/admin/assets/images/finger-print.png">  
+                            <img src="/admin/assets/images/finger-print.png">
                             <span>Account</span>: {{vm.state.organization.name}}
                         </div>
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                
+
                 <div class="contact-stats col-xs-12 margin-top-20 padding-bottom-20" ng-if="vm.state.contactSessionDetails.sessionsCount">
                     <div class="sessions">
                         <span class="description">
@@ -91,12 +91,12 @@
                     <div class="margin-bottom-10">
                         <span class="description ">
                             Attribution
-                        </span>                        
+                        </span>
                     </div>
                     1st:
                     <div class="padding-left-20 inline-block">
                        <a class="contact-attribution-btn" ng-repeat="attribution in vm.state.contactAttributionDetails">
-                           campgn: <span class="text-bold">{{attribution.extraFields.utm_campaign}}</span>
+                           campaign: <span class="text-bold">{{attribution.extraFields.utm_campaign}}</span>
                        </a>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
 
 
             </div>
-            
+
             <div class="contact-details-tab">
                 <tabset class="tabbable">
                     <tab heading="Contact Details">
@@ -117,7 +117,7 @@
                             <div class="col-xs-12 col-sm-7">
                                 <div class="details">
                                     <span class="full-name" ng-if="vm.state.fullName">
-                                        {{vm.state.fullName}}                                
+                                        {{vm.state.fullName}}
                                     </span>
                                     <ul class="contact-tags" >
                                         <li ng-repeat="tag in vm.state.contact.tags track by $index">
@@ -185,7 +185,7 @@
                             <div class="col-xs-12 col-sm-5 address-pane">
                                 <button type="button" class="btn btn-primary btn-o pull-right btn btn-primary btn-o hidden-xs" ng-click="vm.editContactDetails()">
                                     Add Or Edit
-                                </button>  
+                                </button>
                             </div>
                         </div>
                         <div ng-if="vm.uiState.isEditMode" class="edit-contact-info">
@@ -198,19 +198,19 @@
                                         <button type="button" ng-disabled="vm.uiState.saveLoading" class="btn btn-primary btn-o pull-right btn btn-primary btn-o margin-right-5" ng-click="vm.saveContactDetails()">
                                             Save
                                         </button>
-                                        
+
                                     </div>
                                     <div class="form-group col-xs-6">
                                         <label class="control-label">
                                             First Name
                                         </label>
-                                       <input type="text" placeholder="First Name" class="form-control" ng-model="vm.state.contact.first">                                   
+                                       <input type="text" placeholder="First Name" class="form-control" ng-model="vm.state.contact.first">
                                     </div>
                                     <div class="form-group col-xs-6">
                                         <label class="control-label">
                                             Last Name
                                         </label>
-                                       <input type="text" placeholder="Last Name" class="form-control" ng-model="vm.state.contact.last">          
+                                       <input type="text" placeholder="Last Name" class="form-control" ng-model="vm.state.contact.last">
                                     </div>
                                     <div class="form-group col-xs-6">
                                         <label class="control-label">
@@ -251,7 +251,7 @@
                                     <div class="form-group col-xs-12">
                                         <label class="control-label">
                                             Email Address
-                                        </label>                                   
+                                        </label>
                                         <div class="form-group" ng-class="{ 'has-error' : form.email_{{$index}}.$invalid}" ng-repeat="email in vm.state.contact.details[0].emails  track by $index">
                                             <span class="input-icon input-icon-right">
                                                 <input type="email"  ng-pattern="formValidations.email" placeholder="Email address" class="form-control" name="email_{{$index}}" ng-model="vm.state.contact.details[0].emails[$index].email">
@@ -264,10 +264,10 @@
                                     <div class="form-group col-xs-8">
                                         <label class="control-label">
                                             Phone Number
-                                        </label>                                    
+                                        </label>
                                         <div class="form-group" ng-repeat="phone in vm.state.contact.details[0].phones track by $index">
                                             <span class="input-icon input-icon-right">
-                                                <input type="text" placeholder="Phone number" class="form-control" name="phone_{{$index}}" ng-model="vm.state.contact.details[0].phones[$index].number" ind-international-tel-number form="form" phone-field="true">               
+                                                <input type="text" placeholder="Phone number" class="form-control" name="phone_{{$index}}" ng-model="vm.state.contact.details[0].phones[$index].number" ind-international-tel-number form="form" phone-field="true">
                                                 <i ng-if="vm.showAddPhone(phone)" ng-click="vm.contactAddPhoneFn()" class="ti-plus"></i>
                                                 <i ng-if="!vm.showAddPhone(phone)" ng-click="vm.removePhone($index)" class="ti-minus"></i>
                                             </span>
@@ -276,7 +276,7 @@
                                     <div class="form-group col-xs-4">
                                         <label class="control-label">
                                             Extension
-                                        </label>                                    
+                                        </label>
                                         <div class="form-group" ng-repeat="phone in vm.state.contact.details[0].phones track by $index">
                                             <input type="text" placeholder="Extension" class="form-control" ng-pattern="formValidations.extension" name="extension_{{$index}}" ng-model="vm.state.contact.details[0].phones[$index].extension">
                                         </div>
@@ -284,10 +284,10 @@
                                     <div class="form-group col-xs-12">
                                         <label class="control-label">
                                             Website URL
-                                        </label>                                   
+                                        </label>
                                         <div class="form-group" ng-repeat="website in vm.state.contact.details[0].websites track by $index">
                                             <span class="input-icon input-icon-right">
-                                                <input type="text" placeholder="Website URL" class="form-control" name="website_{{$index}}" id="website_{{$index}}" ng-model="vm.state.contact.details[0].websites[$index].website">  
+                                                <input type="text" placeholder="Website URL" class="form-control" name="website_{{$index}}" id="website_{{$index}}" ng-model="vm.state.contact.details[0].websites[$index].website">
                                                 <i ng-if="vm.showAddWebsite(website)" ng-click="vm.contactAddWebsiteFn()" class="ti-plus"></i>
                                                 <i ng-if="!vm.showAddWebsite(website)" ng-click="vm.removeWebsite($index)" class="ti-minus"></i>
                                             </span>
@@ -297,19 +297,19 @@
                                         <label class="control-label">
                                             Facebook URL
                                         </label>
-                                       <input type="text" placeholder="Facebook Url" class="form-control" name="facebook_0" id="facebook_0" ng-model="vm.state.contact.details[0].facebookUrl">          
+                                       <input type="text" placeholder="Facebook Url" class="form-control" name="facebook_0" id="facebook_0" ng-model="vm.state.contact.details[0].facebookUrl">
                                     </div>
                                     <div class="form-group col-xs-12">
                                         <label class="control-label">
                                             Linkedin URL
                                         </label>
-                                       <input type="text" placeholder="Linkedin Url" class="form-control" name="linkedin_0" id="linkedin_0" ng-model="vm.state.contact.details[0].linkedinUrl">          
+                                       <input type="text" placeholder="Linkedin Url" class="form-control" name="linkedin_0" id="linkedin_0" ng-model="vm.state.contact.details[0].linkedinUrl">
                                     </div>
                                     <div class="form-group col-xs-12">
                                         <label class="control-label">
                                             Company Name
                                         </label>
-                                       <input type="text" placeholder="Company Name" class="form-control" ng-model="vm.state.contact.details[0].company">          
+                                       <input type="text" placeholder="Company Name" class="form-control" ng-model="vm.state.contact.details[0].company">
                                     </div>
 
                                     <div class="col-xs-12 address-fields" ng-repeat="address in vm.state.contact.details[0].addresses track by $index"
@@ -390,7 +390,7 @@
                                     {{vm.state.contactDeviceDetails.user_agent.browser.name}} {{vm.state.contactDeviceDetails.user_agent.browser.version}}
                                 </span>
                             </div>
-                            <div class="details">    
+                            <div class="details">
                                 <span class="description">
                                     OS Details:
                                 </span>
@@ -398,13 +398,13 @@
                                     {{vm.state.contactDeviceDetails.user_agent.os.name}} {{vm.state.contactDeviceDetails.user_agent.os.version}}
                                 </span>
                             </div>
-                            <div class="details">    
+                            <div class="details">
                                 <span class="description">
                                     Device:
                                 </span>
                                 <span class="value">
                                     {{vm.state.contactDeviceDetails.user_agent.device}}
-                                </span>                                
+                                </span>
                             </div>
                         </div>
                     </tab>
@@ -422,7 +422,7 @@
             </div>
         </div>
         <!-- contact timeline/notes pane -->
-        <div class="col-xs-12 col-sm-6 contact-details-right-pane">       
+        <div class="col-xs-12 col-sm-6 contact-details-right-pane">
             <contact-activity-component contact-id="vm.state.contactId" contact="vm.state.contact" ng-if="vm.state.contact" contact-device-details="vm.state.contactDeviceDetails" contact-session-details="vm.state.contactSessionDetails" contact-attribution-details="vm.state.contactAttributionDetails"></contact-activity-component>
         </div>
         <div class="clearfix"></div>
