#10719 - temp hide account on contact detail page - till we figure out what it is for

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -51,7 +51,7 @@
                                 <li></li>
                             </ul>
                         </div>
-                        <div class="account-info margin-top-30">
+                        <div class="account-info margin-top-30" ng-if="0">
                             <img src="/admin/assets/images/finger-print.png">
                             <span>Account</span>: {{vm.state.organization.name}}
                         </div>
